# trading-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TradingService-Complete.postman_collection.json  deploy-aws.md  deploy-optimized.sh  deploy.sh  docker-compose.yml  ec2-info.txt  task-definition.json  trading-service-key.pem
.cargo/: config.toml
docs/: AUTH_FLOWS.md  ORDERS_API.md  SWAGGER_DOCUMENTATION.md
src/: ccxt.rs  lib.rs  main.rs  mongodb.rs
src/api/: auth.rs  balances.rs  exchanges.rs  external.rs  health.rs  metrics.rs  mod.rs  orders.rs  orders_old.rs  snapshots.rs  strategies.rs  strategies.rs.bak  strategy_templates.rs  swagger.rs  tickers.rs  tokens.rs  user_exchanges.rs
src/ccxt/: client.rs  mod.rs  types.rs
src/database/: mod.rs
src/jobs/: mod.rs  snapshot_scheduler.rs  strategy_monitor.rs
src/middleware/: auth.rs  mod.rs  security_headers.rs
src/models/: balance.rs  exchange.rs  mod.rs  order.rs  strategy.rs  strategy.rs.bak  strategy_template.rs  tokens_cache.rs  user.rs  user_exchange.rs
src/seeds/: mod.rs  strategy_templates_seed.rs
src/services/: auth_service.rs  balance_service.rs  coingecko_service.rs  exchange_rate_service.rs  exchange_service.rs  mod.rs  order_service.rs  strategy_service.rs  ticker_service.rs  token_service.rs  user_exchanges_service.rs
src/utils/: cache.rs  crypto.rs  error.rs  mod.rs  thread_pool.rs
tests/: test-strategy-rules.mjs
tools/: strategy_simulator.py
