[package]
name = "trading-service"
version = "0.1.0"
edition = "2021"

# Otimizações de compilação para reduzir tamanho e uso de recursos
[profile.release]
opt-level = "z"        # Otimiza para tamanho
lto = true             # Link-time optimization
codegen-units = 1      # Melhor otimização (compilação mais lenta, binário menor)
panic = "abort"        # Reduz tamanho do binário
strip = true           # Remove símbolos de debug

[profile.dev]
opt-level = 1          # Otimização básica em dev para compilação mais rápida
debug = false          # Desabilita info de debug completo

[dependencies]
# Web Framework (features mínimas)
actix-web = { version = "4", default-features = false, features = ["macros", "compress-gzip"] }
actix-rt = "2"
actix-cors = "0.7"

# Python Integration (CCXT)
pyo3 = { version = "0.20", features = ["auto-initialize"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - MongoDB 3.5+ (tokio-runtime é padrão na v3.x)
mongodb = "3.5"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"

# Auth & Security
jsonwebtoken = "9"
bcrypt = "0.15"
base64 = "0.21"

# Utilities
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
dotenv = "0.15"
env_logger = { version = "0.11", default-features = false }
log = "0.4"
uuid = { version = "1", default-features = false, features = ["v4", "serde", "fast-rng"] }
lazy_static = "1.4"

# HTTP Client (features mínimas)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"

# Async utilities
async-trait = "0.1"

